added convenience method to create a MockHM from a String and a minor nitpicking tweak to MockNodeData ;)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@8941 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f